// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders 1`] = `
<label
  className="sc-lfVKn dnrOXg"
>
  <input
    className="sc-jTIXKS gjxwKr"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-YbHMG kPXTTu"
  >
    <span
      className="sc-jverBc gGQUzB"
    >
      <div
        checked={false}
        className="sc-lbWYZt dBGZob"
      />
    </span>
    <p
      className="sc-dloDHE dtscmd"
      color="bulma.100"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
  </div>
</label>
`;

exports[`Checkbox renders Checked 1`] = `
<label
  className="sc-lfVKn dnrOXg"
>
  <input
    checked={true}
    className="sc-jTIXKS gjxwKr"
    onClick={[Function]}
    readOnly={true}
    type="checkbox"
  />
  <div
    className="sc-YbHMG kPXTTu"
  >
    <span
      className="sc-jverBc gGQUzB"
    >
      <div
        checked={true}
        className="sc-lbWYZt idMXzK"
      />
    </span>
    <p
      className="sc-dloDHE dtscmd"
      color="bulma.100"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
  </div>
</label>
`;

exports[`Checkbox renders Disabled 1`] = `
<label
  className="sc-lfVKn dnrOXg"
>
  <input
    className="sc-jTIXKS gjxwKr"
    disabled={true}
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-YbHMG kPXTTu"
  >
    <span
      className="sc-jverBc gGQUzB"
    >
      <div
        checked={false}
        className="sc-lbWYZt dBGZob"
      />
    </span>
    <p
      className="sc-dloDHE dtscmd"
      color="bulma.100"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
  </div>
</label>
`;

exports[`Checkbox renders No label 1`] = `
<label
  className="sc-lfVKn dnrOXg"
>
  <input
    className="sc-jTIXKS gjxwKr"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-YbHMG kPXTTu"
  >
    <span
      className="sc-jverBc gGQUzB"
    >
      <div
        checked={false}
        className="sc-lbWYZt dBGZob"
      />
    </span>
  </div>
</label>
`;

exports[`Checkbox renders Reverse direction 1`] = `
<label
  className="sc-lfVKn dnrOXg"
>
  <input
    className="sc-jTIXKS gjxwKr"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-YbHMG kPXTTu"
  >
    <p
      className="sc-dloDHE dtscmd"
      color="bulma.100"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
    <span
      className="sc-jverBc gGQUzB"
    >
      <div
        checked={false}
        className="sc-lbWYZt dBGZob"
      />
    </span>
  </div>
</label>
`;
